# is-googlebot

./: .gitignore  LICENSE  README.md  pyproject.toml
is_googlebot/: __init__.py
tests/: __init__.py  test_is_googlebot.py
