[tool.poetry]
name = "is-googlebot"
version = "0.1.0"
description = ""
authors = ["Jared Lunde <jared.lunde@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
ua-parser = "^0.8.0"
user_agents = "^2.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
