[tool.poetry]
name = "is-googlebot"
version = "0.1.1"
description = ""
authors = ["Jared Lunde <jared.lunde@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[tool.poetry.scripts]
tests = 'tests:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

